# casper-managed-counter

./: .gitignore  Makefile  README.md
managed_counter/: Cargo.toml
managed_counter/src/: counter_contract.rs  deployer.rs  lib.rs  main.rs  manager_contract.rs
tests/src/: integration_tests.rs
